add cli, get host func & makefile fix & add ip config file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "ssh.h": "c",
-        "shell.h": "c"
+        "shell.h": "c",
+        "cli.h": "c",
+        "stdlib.h": "c"
     }
 }
